--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
 </head>
 <body>
     <header>
-        <img src="https://img.freepik.com/free-photo/closeup-ripe-bananas-cutting-board-with-knife-it-isolated-yellow-background_181624-57153.jpg?t=st=1717183417~exp=1717187017~hmac=9a3cd1cca3fa065d49ceb9e78596a0e004dc47800caad746c493f7b0e8f0c066&w=740" alt="Banana" style="width: 400px; height 200px; border-radius: 20px;">
+        <img src="https://img.freepik.com/free-photo/closeup-ripe-bananas-cutting-board-with-knife-it-isolated-yellow-background_181624-57153.jpg?t=st=1717183417~exp=1717187017~hmac=9a3cd1cca3fa065d49ceb9e78596a0e004dc47800caad746c493f7b0e8f0c066&w=740" alt="Banana" style="width: 400px; height: 250px; border-radius: 20px;">
+
         <h1>Banana Fever</h1>
         <p>¡Las bananas más saludables y sabrosas!</p>
+
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <p>Puedes contactarme a través de los siguientes medios:</p>
+            <ul>
+              <li><b> Email: </b>mauricio@bananafever.com</li>
+              <li><b>Teléfono: </b>+022 452 007</li>
+              <li><b>Redes sociales: </b> bananafever.com</li>
+            </ul>
+          </section>
     </header>
 
     <main>
