--- a/index.html
+++ b/index.html
@@ -1,54 +1,63 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Fever</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <img src="https://img.freepik.com/free-photo/closeup-ripe-bananas-cutting-board-with-knife-it-isolated-yellow-background_181624-57153.jpg?t=st=1717183417~exp=1717187017~hmac=9a3cd1cca3fa065d49ceb9e78596a0e004dc47800caad746c493f7b0e8f0c066&w=740" alt="Banana" style="width: 400px; height: 250px; border-radius: 20px;">
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5; /* Color de fondo */
+    color: #333; /* Color del texto principal */
 
-        <h1>Banana Fever</h1>
-        <p>¡Las bananas más saludables y sabrosas!</p>
+}
 
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <p>Puedes contactarme a través de los siguientes medios:</p>
-            <ul>
-              <li><b> Email: </b>mauricio@bananafever.com</li>
-              <li><b>Teléfono: </b>+022 452 007</li>
-              <li><b>Redes sociales: </b> bananafever.com</li>
-            </ul>
-          </section>
-    </header>
+header {
+    background-color: #f8da22 ; /* Color de fondo del encabezado */
+    color: #000000; /* Color del texto del encabezado */
+    padding: 20px;
+    text-align: center;
+    
 
-    <main>
-        <section id="about">
-            <h2>Sobre Nosotros</h2>
-            <p>En Banana Fever, nos dedicamos a ofrecer bananas con propiedades saludables y sabores únicos. Disfruta de nuestras bananas con sabor a frutilla, naranja y manzana.</p>
-        </section>
+}
+header h1 {
+    font-size: 4.5em; /* Tamaño del título principal */
+    margin-bottom: 10px;
+    color: #f7f4f4; /* Color del texto del título principal */
+}
 
-        <section id="products">
-            <h2>Nuestros Productos</h2>
-            <div class="product">
-                <h3>Banana Sabor Frutilla</h3>
-                <p>Una mezcla deliciosa de banana y frutilla que te encantará.</p>
-            </div>
-            <div class="product">
-                <h3>Banana Sabor Naranja</h3>
-                <p>Disfruta de la frescura de la naranja combinada con la suavidad de la banana.</p>
-            </div>
-            <div class="product">
-                <h3>Banana Sabor Manzana</h3>
-                <p>Una combinación crujiente y dulce que no te puedes perder.</p>
-            </div>
-        </section>
-    </main>
+main {
+    padding: 20px;
+}
 
-    <footer>
-        <p>&copy; 2024 Banana Fever. Todos los derechos reservados.</p>
-    </footer>
-</body>
-</html>
+section {
+    margin-bottom: 40px;
+}
+
+section h2 {
+    border-bottom: 2px solid #181714; /* Línea inferior del título */
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    color: #F8DA22; /* Color del título */
+}
+
+.product {
+    background-color: #e7b2b2; /* Color de fondo del producto */
+    border: 1px solid #cfcfcf; /* Borde del producto */
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px; /* Bordes redondeados */
+}
+
+.product h3 {
+    color: #e7e404; /* Color del título del producto */
+}
+
+footer {
+    background-color: #333; /* Color de fondo del pie de página */
+    color: #fff; /* Color del texto del pie de página */
+    text-align: center;
+    padding: 10px;
+}
+
+/* Estilos específicos del pie de página */
+
+footer p {
+    margin: 0;
+
+}
