--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-body {
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Banana Fever</title>
+    <style>
+        body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -61,3 +68,53 @@ footer p {
     margin: 0;
 
 }
+    </style>
+    <link rel="stylesheet" href="styles.css">
+    
+</head>
+<body>
+    <header>
+        <img src="https://img.freepik.com/free-photo/closeup-ripe-bananas-cutting-board-with-knife-it-isolated-yellow-background_181624-57153.jpg?t=st=1717183417~exp=1717187017~hmac=9a3cd1cca3fa065d49ceb9e78596a0e004dc47800caad746c493f7b0e8f0c066&w=740" alt="Banana" style="width: 400px; height: 250px; border-radius: 20px;">
+
+        <h1>Banana Fever</h1>
+        <p>¡Las bananas más saludables y sabrosas!</p>
+
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <p>Puedes contactarme a través de los siguientes medios:</p>
+            <ul>
+              <li><b> Email: </b>mauricio@bananafever.com</li>
+              <li><b>Teléfono: </b>+022 452 007</li>
+              <li><b>Redes sociales: </b> bananafever.com</li>
+            </ul>
+          </section>
+    </header>
+
+    <main>
+        <section id="about">
+            <h2>Sobre Nosotros</h2>
+            <p>En Banana Fever, nos dedicamos a ofrecer bananas con propiedades saludables y sabores únicos. Disfruta de nuestras bananas con sabor a frutilla, naranja y manzana.</p>
+        </section>
+
+        <section id="products">
+            <h2>Nuestros Productos</h2>
+            <div class="product">
+                <h3>Banana Sabor Frutilla</h3>
+                <p>Una mezcla deliciosa de banana y frutilla que te encantará.</p>
+            </div>
+            <div class="product">
+                <h3>Banana Sabor Naranja</h3>
+                <p>Disfruta de la frescura de la naranja combinada con la suavidad de la banana.</p>
+            </div>
+            <div class="product">
+                <h3>Banana Sabor Manzana</h3>
+                <p>Una combinación crujiente y dulce que no te puedes perder.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Banana Fever. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
