--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <header>
-        <img src="https://img.freepik.com/free-photo/closeup-ripe-bananas-cutting-board-with-knife-it-isolated-yellow-background_181624-57153.jpg?t=st=1717183417~exp=1717187017~hmac=9a3cd1cca3fa065d49ceb9e78596a0e004dc47800caad746c493f7b0e8f0c066&w=740" alt="Banana" style="width: 400px; height: 250px; border-radius: 20px;">
+        <img src="https://img.freepik.com/premium-vector/banana-vector-clipart_792626-177.jpg?w=740" alt="Banana" style="width: 400px; height: 250px; border-radius: 20px;">
 
         <h1>Banana Fever</h1>
         <p>¡Las bananas más saludables y sabrosas!</p>
