--- a/index.html
+++ b/index.html
@@ -5,89 +5,146 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Fever</title>
     <style>
-                body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5; /* Color de fondo */
-            color: #333; /* Color del texto principal */
+        body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #EEE5E9;
+    color: #333;
+}
 
-        }
+header {
+    text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
 
-        header {
-            background-color: #f8da22 ; /* Color de fondo del encabezado */
-            color: #000000; /* Color del texto del encabezado */
-            padding: 20px;
-            text-align: center;
-            
+header .header-image {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    border-radius: 20px;
+}
 
-        }
-        header h1 {
-            font-size: 4.5em; /* Tamaño del título principal */
-            margin-bottom: 10px;
-            color: #f7f4f4; /* Color del texto del título principal */
-        }
+header h1 {
+    font-size: 3em;
+    color: #f8da22;
+    margin: 20px 0 10px 0;
+}
 
-        main {
-            padding: 20px;
-        }
+header p {
+    margin: 10px 0 20px 0;
+}
 
-        section {
-            margin-bottom: 40px;
-        }
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
 
-        section h2 {
-            border-bottom: 2px solid #181714; /* Línea inferior del título */
-            padding-bottom: 10px;
-            margin-bottom: 20px;
-            color: #F8DA22; /* Color del título */
-        }
+.social-icons a {
+    text-decoration: none;
+    color: #333;
+    font-size: 1.5em;
+}
 
-        .product {
-            background-color: #e7b2b2; /* Color de fondo del producto */
-            border: 1px solid #cfcfcf; /* Borde del producto */
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 5px; /* Bordes redondeados */
-        }
+.social-icons a:hover {
+    color: #f8da22;
+}
 
-        .product h3 {
-            color: #e7e404; /* Color del título del producto */
-        }
+main {
+    padding: 0 20px;
+}
 
-        footer {
-            background-color: #333; /* Color de fondo del pie de página */
-            color: #fff; /* Color del texto del pie de página */
-            text-align: center;
-            padding: 10px;
-        }
+section {
+    margin-bottom: 40px;
+}
 
-        /* Estilos específicos del pie de página */
+section h2 {
+    color: #f8da22;
+    border-bottom: 2px solid #f8da22;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
 
-        footer p {
-            margin: 0;
+.product {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
 
-        }
+.product h3 {
+    color: #f8da22;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+}
+
+footer p {
+    margin: 0;
+}
+
+/* Media queries para dispositivos móviles */
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 2.5em;
+    }
+
+    section h2 {
+        font-size: 1.5em;
+    }
+
+    .product {
+        padding: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    header h1 {
+        font-size: 2em;
+    }
+
+    section h2 {
+        font-size: 1.25em;
+    }
+
+    .social-icons {
+        gap: 10px;
+    }
+
+    .social-icons a {
+        font-size: 1.25em;
+    }
+
+    .product {
+        padding: 8px;
+    }
+}
     </style>
     <link rel="stylesheet" href="styles.css">
-    
+    <!-- Agregar FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <img src="https://img.freepik.com/free-photo/closeup-ripe-bananas-cutting-board-with-knife-it-isolated-yellow-background_181624-57153.jpg?t=st=1717183417~exp=1717187017~hmac=9a3cd1cca3fa065d49ceb9e78596a0e004dc47800caad746c493f7b0e8f0c066&w=740" alt="Banana" style="width: 400px; height: 250px; border-radius: 20px;">
-
+        <img src="https://img.freepik.com/free-photo/closeup-ripe-bananas-cutting-board-with-knife-it-isolated-yellow-background_181624-57153.jpg?t=st=1717183417~exp=1717187017~hmac=9a3cd1cca3fa065d49ceb9e78596a0e004dc47800caad746c493f7b0e8f0c066&w=740" alt="Banana" class="header-image">
         <h1>Banana Fever</h1>
         <p>¡Las bananas más saludables y sabrosas!</p>
 
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <p>Puedes contactarme a través de los siguientes medios:</p>
-            <ul>
-              <li><b> Email: </b>mauricio@bananafever.com</li>
-              <li><b>Teléfono: </b>+022 452 007</li>
-              <li><b>Redes sociales: </b> bananafever.com</li>
-            </ul>
-          </section>
+        <!-- Redes Sociales -->
+        <div class="social-icons">
+            <a href="URL_DE_TU_FACEBOOK" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="URL_DE_TU_TWITTER" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="URL_DE_TU_INSTAGRAM" class="social-icon"><i class="fab fa-instagram"></i></a>
+        </div>
     </header>
 
     <main>
