--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 header {
     text-align: center;
     padding: 20px;
-    background-color: #fff;
+    background-color: #f8da22;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
