--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ header .header-image {
 
 header h1 {
     font-size: 3em;
-    color: #f8da22;
+    color: #FCFCFC;
     margin: 20px 0 10px 0;
 }
 
